packages/beff-core/tests/snapshots/frontend_v2__tests__local_named_export_as_default.snap
---
source: packages/beff-core/tests/frontend_v2.rs
expression: "print_types_multifile(&[(\"t.ts\",\nr#\"\n                    const A = \"a\" as const;\n                    export { A as default };\n                \"#,),\n(\"entry.ts\",\nr#\"\n                    import D from \"./t\";\n                    type X = typeof D;\n                    parse.buildParsers<{ X: X }>();\n                \"#)])"
---
--- t.ts ---
const A = "a" as const;
export { A as default };
--- entry.ts ---
import D from "./t";
type X = typeof D;
parse.buildParsers<{ X: X }>();
--------------------------------
type X = "a";


type BuiltParsers = {
  X: X,
}
