packages/beff-core/tests/snapshots/frontend_v2__tests__named_export_with_renaming.snap
---
source: packages/beff-core/tests/frontend_v2.rs
expression: "print_types_multifile(&[(\"t.ts\",\nr#\"\n                    const A = \"a\" as const;\n                    export { A as B };\n                \"#,),\n(\"entry.ts\",\nr#\"\n                    import { B } from \"./t\";\n                    type X = typeof B;\n                    parse.buildParsers<{ X: X }>();\n                \"#)])"
---
type BuiltParsers = {
  X: "a",
}
