packages/beff-core/tests/snapshots/frontend_v2__tests__named_import_with_renaming.snap
---
source: packages/beff-core/tests/frontend_v2.rs
expression: "print_types_multifile(&[(\"t.ts\",\nr#\"\n                    export const A = \"a\" as const;\n                \"#,),\n(\"entry.ts\",\nr#\"\n                    import { A as B } from \"./t\";\n                    type X = typeof B;\n                    parse.buildParsers<{ X: X }>();\n                \"#)])"
---
type X = "a";


type BuiltParsers = {
  X: X,
}
