packages/beff-core/tests/snapshots/frontend_v2__tests__namespace_export_type_and_value_collision.snap
---
source: packages/beff-core/tests/frontend_v2.rs
expression: "print_types_multifile(&[(\"t.ts\",\nr#\"\n                    export type A = string;\n                    export const A = \"value\" as const;\n                \"#,),\n(\"entry.ts\",\nr#\"\n                    import * as NS from \"./t\";\n                    type T = NS.A;\n                    type V = typeof NS.A;\n                    parse.buildParsers<{ T: T, V: V }>();\n                \"#)])"
---
type entry_ts__T = t_ts__A;

type entry_ts__V = "value";

type t_ts__A = string;


type BuiltParsers = {
  T: entry_ts__T,
  V: entry_ts__V,
}
