packages/beff-core/tests/snapshots/frontend_v2__tests__namespace_re_export.snap
---
source: packages/beff-core/tests/frontend_v2.rs
expression: "print_types_multifile(&[(\"a.ts\",\nr#\"\n                    export const A = \"a\" as const;\n                \"#,),\n(\"b.ts\",\nr#\"\n                    export * as ns from \"./a\";\n                \"#,),\n(\"entry.ts\",\nr#\"\n                    import { ns } from \"./b\";\n                    type X = typeof ns.A;\n                    parse.buildParsers<{ X: X }>();\n                \"#)])"
---
type X = "a";


type BuiltParsers = {
  X: X,
}
