packages/beff-core/tests/snapshots/frontend_v2__tests__nested_qualified_type_access.snap
---
source: packages/beff-core/tests/frontend_v2.rs
expression: "print_types_multifile(&[(\"c.ts\",\nr#\"\n                    export type C = string;\n                \"#,),\n(\"b.ts\",\nr#\"\n                    export * as B from \"./c\";\n                \"#,),\n(\"a.ts\",\nr#\"\n                    export * as A from \"./b\";\n                \"#,),\n(\"entry.ts\",\nr#\"\n                    import { A } from \"./a\";\n                    type X = A.B.C;\n                    parse.buildParsers<{ X: X }>();\n                \"#)])"
---
type c_ts__C = string;

type entry_ts__X = c_ts__C;


type BuiltParsers = {
  X: entry_ts__X,
}
