packages/beff-core/tests/snapshots/frontend_v2__tests__nested_qualified_value_access.snap
---
source: packages/beff-core/tests/frontend_v2.rs
expression: "print_types_multifile(&[(\"c.ts\",\nr#\"\n                    export const C = \"c\" as const;\n                \"#,),\n(\"b.ts\",\nr#\"\n                    export * as B from \"./c\";\n                \"#,),\n(\"a.ts\",\nr#\"\n                    export * as A from \"./b\";\n                \"#,),\n(\"entry.ts\",\nr#\"\n                    import { A } from \"./a\";\n                    type X = typeof A.B.C;\n                    parse.buildParsers<{ X: X }>();\n                \"#)])"
---
type BuiltParsers = {
  X: "c",
}
