packages/beff-core/tests/snapshots/frontend_v2__tests__number_fmt_extends_builtin.snap
---
source: packages/beff-core/tests/frontend_v2.rs
expression: "print_types_multifile(&[(\"entry.ts\", from)])"
---
type NonInfiniteNumber = NumberFormat<"NonInfiniteNumber">;

type Rate = NumberFormatExtends<NumberFormat<"NonInfiniteNumber">, "Rate">;


type BuiltParsers = {
  NonInfiniteNumber: NonInfiniteNumber,
  Rate: Rate,
}
