packages/beff-core/tests/snapshots/frontend_v2__tests__qualified_access_via_default_import_object.snap
---
source: packages/beff-core/tests/frontend_v2.rs
expression: "print_types_multifile(&[(\"t.ts\",\nr#\"\n                    const Y = { A: \"a\" as const };\n                    export default Y;\n                \"#,),\n(\"entry.ts\",\nr#\"\n                    import N from \"./t\";\n                    type X = typeof N.A;\n                    parse.buildParsers<{ X: X }>();\n                \"#)])"
---
type BuiltParsers = {
  X: "a",
}
