packages/beff-core/tests/snapshots/frontend_v2__tests__qualified_access_via_default_reexport_of_namespace.snap
---
source: packages/beff-core/tests/frontend_v2.rs
expression: "print_types_multifile(&[(\"a.ts\",\nr#\"\n                    export const A = \"a\" as const;\n                \"#,),\n(\"b.ts\",\nr#\"\n                    import * as N from \"./a\";\n                    export default N;\n                \"#,),\n(\"entry.ts\",\nr#\"\n                    import N from \"./b\";\n                    type X = typeof N.A;\n                    parse.buildParsers<{ X: X }>();\n                \"#)])"
---
--- a.ts ---
export const A = "a" as const;
--- b.ts ---
import * as N from "./a";
export default N;
--- entry.ts ---
import N from "./b";
type X = typeof N.A;
parse.buildParsers<{ X: X }>();
--------------------------------
type X = "a";


type BuiltParsers = {
  X: X,
}
